--- a/public/index.html
+++ b/public/index.html
@@ -39,5 +39,34 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- Chatsale.io widget -->
+    <script type="text/javascript">
+      !(function () {
+        var e = {
+            token: "+918056203904",
+            position: "right",
+            bottomSpacing: "20",
+            callToActionMessage: "",
+            displayOn: "everywhere",
+            subtitle: "",
+            message: {
+              name: "Nepco Impex LLP",
+              content:
+                "                    Hey! How can we help you?\n                  ",
+            },
+          },
+          t = document.location.protocol + "//chatsale.io",
+          o = document.createElement("script");
+        (o.type = "text/javascript"),
+          (o.async = !0),
+          (o.src = t + "/widget-folder/widget-whatsapp-chat.js"),
+          (o.onload = function () {
+            BhWidgetWhatsappChat.init(e);
+          });
+        var n = document.getElementsByTagName("script")[0];
+        n.parentNode.insertBefore(o, n);
+      })();
+    </script>
+    <!-- /Chatsale.io widget -->
   </body>
 </html>
