--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Nepco Impex LLP</title>
   </head>
-  <body oncontextmenu="return false">
+  <!-- oncontextmenu="return false" -->
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="text/javascript">
