--- a/public/index.html
+++ b/public/index.html
@@ -2,21 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Nepco Impex LLP is one of the leading company amongst the manufacturers and exporters of high quality flanges,Pipes and Pipe Fittings, Buttweld, ..."
       data-rh="true"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Logo.png" />
-    <link rel="icon" href="%PUBLIC_URL%/Fevicon.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/Fevicon.png" />
     <title>Nepco Impex LLP</title>
   </head>
-  <!-- oncontextmenu="return false" -->
-  <body>
+
+  <body oncontextmenu="return false">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script type="text/javascript">
